Add sonarqube configuration in build.gradle

--- a/build.gradle
+++ b/build.gradle
@@ -2,6 +2,17 @@ plugins {
 	id 'org.springframework.boot' version '2.6.4'
 	id 'io.spring.dependency-management' version '1.0.11.RELEASE'
 	id 'java'
+	id "org.sonarqube" version "3.3"
+	id "jacoco"
+}
+
+sonarqube {
+	properties {
+		property "sonar.projectKey", "eduardoshibukawa-tw_sonarqube-poc"
+		property "sonar.organization", "eduardoshibukawa-tw"
+		property "sonar.host.url", "https://sonarcloud.io"
+		property "sonar.exclusions", "**/*Generated.java"
+	}
 }
 
 group = 'com.eduardoshibukawa-tw.com'
@@ -19,4 +30,10 @@ dependencies {
 
 tasks.named('test') {
 	useJUnitPlatform()
+}
+
+jacocoTestReport {
+	reports {
+		xml.enabled true
+	}
 }
