--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3,7 +3,7 @@ version: 2.1
 jobs:
   build:
     docker:
-      - image: cimg/openjdk:11-jdk
+      - image: cimg/openjdk:11.0.13
     working_directory: ~/repo
     environment:
       JVM_OPTS: -Xmx3200m
